# Wienere

./: README.md  io.github.qwersyk.Wienere.json  meson.build
.github/workflows/: flatpak-builder.yml
data/: io.github.qwersyk.Wienere.desktop.in  io.github.qwersyk.Wienere.gschema.xml  io.github.qwersyk.Wienere.metainfo.xml.in  io.github.qwersyk.Wienere.service.in  meson.build
data/icons/: meson.build
modules/: python3-beautifulsoup4.json  python3-fake_useragent.json  python3-openai.json
po/: POTFILES.in  meson.build
src/: config.py  control.py  dialog.py  main.py  managers.py  meson.build  tools.py  widgets.py  wienere.gresource.xml  wienere.in  window.py  window.ui
